--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 body {
     background-image: url("../images/concrete_seamless.png")
 }
-footer {
+.footer {
     text-align: center;
     margin-top: 20px;
     border-top: 1px solid black;
+}
+.gifButton {
+    margin: 2px;
 }
